# scrap-amazon-deals

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  amazon_spider.py  compose.yml  pyproject.toml  settings.py
amazon/: .env.sample  Makefile  README.md  compose.yml  main.py  test.txt
amazon/amazon/: items.py  middlewares.py  pipelines.py  settings.py
amazon/amazon/helpers/: deals_pages_generator.py  generate_pid_errors_file.py  get_deals_generator.py  get_deals_pages_generator.py  get_discount.py  get_failed_products_generator.py  get_generator.py  get_is_prime.py  get_price.py  postgres_helper.py  postgres_service.py
amazon/amazon/helpers/amazon_elements/: get_category.py  get_discount.py  get_is_prime.py  get_price.py
amazon/amazon/helpers/amazon_item/: amazon_item.py
amazon/amazon/helpers/database/: postgres.py
amazon/amazon/helpers/rabbitmq/: publisher.py
amazon/amazon/spiders/: amazon_spider.py
amazon/migrations/: 001_create_products_table.up.sql
bookscraper/: Makefile  README.md  compose.yml
bookscraper/bookscraper/: items.py  middlewares.py  pipelines.py  settings.py
bookscraper/bookscraper/helpers/: postgres_helper.py
bookscraper/bookscraper/spiders/: bookspider.py
bookscraper/migrations/: 002_create_books_table.up.sql
magalu/: main.py
magalu/magalu/: middlewares.py  pipelines.py  settings.py
magalu/magalu/spiders/: magalu_spider.py
playwright_amazon/: Makefile  README.md  scrapy.cfg
playwright_amazon/migrations/: 001_create_products_table.up.sql
playwright_amazon/playwright_amazon/: items.py  middlewares.py  pipelines.py  settings.py
playwright_amazon/playwright_amazon/helpers/: get_category.py  postgres_helper.py
playwright_amazon/playwright_amazon/spiders/: amazon_spider.py
splash_amazon/: compose.yml  scrapy.cfg
splash_amazon/splash_amazon/: items.py  middlewares.py  pipelines.py  settings.py
splash_amazon/splash_amazon/spiders/: amazon_spider.py
(+7 files in other folders)
