[tool.poetry]
name = "scrap-amazon-deals"
version = "3.0.3"
description = "Scrap Amazon Deals "
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "amazon/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.0"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
fake-useragent = "^1.1.3"
scrapy-playwright = "^0.0.30"
pika = "^1.3.2"
selenium = "^4.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
